update profile photo

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
                     <a href="#" role="menuitem">Home</a>
                 </li>
                 <li role="presentation">
-                    <a href="#about" role="menuitem">about</a>
+                    <a href="#about" role="menuitem">A bout</a>
                 </li>
-                <li role="presentation"><a href="#work" role="menuitem">Work</a>
+                <li role="presentation"><a href="#work"
+                        role="menuitem">Projects</a>
                 </li>
                 <li role="presentation"><a href="#contact"
                         role="menuitem">Contact</a>
@@ -97,8 +98,8 @@
                 </div>
             </div>
             <div class="hero-yellow">
-                <img src="img/example-profile_photo-400x400.jpg "
-                    alt="Mezekr profile portraitphotograph" width="100%">
+                <img src="img/MW-profile.png"
+                    alt="Mezekr profile portrait photograph" width="150%">
             </div>
         </section>
         <!-- aboutme skills section of main page -->
@@ -120,9 +121,8 @@
                         <li>Vue</li>
                     </ul>
                     <h3>Backend</h3>
-                    <p>+ Develop back-end <br>
-                        + logic to support web/app with data and real-time
-                        interaction.</p>
+                    <p>+ Develop logic to support web/app with data and
+                        real-time interaction.</p>
                     <ul>
                         <li>Node</li>
                         <li>Express</li>
@@ -221,6 +221,78 @@
                     </figure>
                     <h3>Pokedex JavaScript</h3>
                     <p>This is exmple of the project desicription...
+                    </p>
+                    <div class="teck-stack">
+                        <h4>Teck stack</h4>
+                        <ul>
+                            <li>Html</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                            <li>Angular</li>
+                            <li>Vue</li>
+                        </ul>
+                    </div>
+                </article>
+                <article>
+                    <figure>
+                        <div>
+                            <img src="img/projects/MeziFlix_React_app.png"
+                                alt="MeziFlix React app" width="100%">
+                            <figcaption>MeziFlix React app</figcaption>
+                        </div>
+                    </figure>
+                    <h3>MeziFlix</h3>
+                    <p>This is exmple of the project desicription...This is
+                        exmple of the project desicription
+                    </p>
+                    <div class="teck-stack">
+                        <h4>Teck stack</h4>
+                        <ul>
+                            <li>Html</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                            <li>Angular</li>
+                            <li>Vue</li>
+                        </ul>
+                    </div>
+                </article>
+                <article>
+                    <figure>
+                        <div>
+                            <img src="img/projects/MeziFlix_React_app.png"
+                                alt="MeziFlix React app" width="100%">
+                            <figcaption>MeziFlix React app</figcaption>
+                        </div>
+                    </figure>
+                    <h3>MeziFlix</h3>
+                    <p>This is exmple of the project desicription...This is
+                        exmple of the project desicription
+                    </p>
+                    <div class="teck-stack">
+                        <h4>Teck stack</h4>
+                        <ul>
+                            <li>Html</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                            <li>Angular</li>
+                            <li>Vue</li>
+                        </ul>
+                    </div>
+                </article>
+                <article>
+                    <figure>
+                        <div>
+                            <img src="img/projects/MeziFlix_React_app.png"
+                                alt="MeziFlix React app" width="100%">
+                            <figcaption>MeziFlix React app</figcaption>
+                        </div>
+                    </figure>
+                    <h3>MeziFlix</h3>
+                    <p>This is exmple of the project desicription...This is
+                        exmple of the project desicription
                     </p>
                     <div class="teck-stack">
                         <h4>Teck stack</h4>
