update recent projects section

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                 </div>
             </div>
             <div class="hero-yellow">
-                <img src="img/MW-profile.png"
-                    alt="Mezekr profile portrait photograph" width="150%">
+                <img src="img/MW_profile_small.png"
+                    alt="Mezekr profile portrait photograph" width="100%">
             </div>
         </section>
         <!-- aboutme skills section of main page -->
@@ -187,6 +187,35 @@
                 Projects
             </h2>
             <div class="jobs">
+                <article>
+                    <figure>
+                        <div>
+                            <img src="img/projects/MeziFlix_React_app.png"
+                                alt="MeziFlix React app" width="100%">
+                            <figcaption>MeziFlix React app</figcaption>
+                        </div>
+                    </figure>
+                    <h3>MeziFlix</h3>
+                    <p>A React front-end client for the MeziFlix movie API
+                        application, which is the server side of the
+                        application. It allows the user to create an account and
+                        edit data. It provides the ability to search for a
+                        movie, save/delete it to/from the favorites.
+                    </p>
+                    <div class="teck-stack">
+                        <h4>Teck stack</h4>
+                        <ul>
+                            <li>Html</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                            <li>MongoDB</li>
+                            <li>Docker</li>
+                            <li>MongoDB</li>
+                            <li>Docker</li>
+                        </ul>
+                    </div>
+                </article>
                 <article>
                     <figure>
                         <div>
