update education and experience content

--- a/index.html
+++ b/index.html
@@ -70,12 +70,10 @@
                         <span>Leverage Full-Stack Web Development Capabilities
                             to Bring Ideas to the Actual Web with
                             Precision!</span>
-                        <span>I am interested in AI Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit. Praesentium, odio
-                            tempora, ratione dolores necessitatibus incidunt
-                            recusandae iure tenetur iste soluta laboriosam!
-                            Debitis, sed officiis consequatur animi iusto
-                            assumenda cumque eius? </span>
+                        <span> I am excited about the opportunity to work with
+                            clients to bring their visions to life, while
+                            combining my skills with my professional
+                            aspirations. </span>
 
                     </p>
                     <div class="call-to-action">
@@ -131,7 +129,7 @@
                         <li>Python</li>
                     </ul>
                     <h3>Data processing</h3>
-                    <p>+ Data processing, Analysing, cleaning and visualising
+                    <p> + Data processing, Analysing, cleaning and visualising
                         row data.
                     </p>
                     <ul>
@@ -144,20 +142,38 @@
                 </div>
 
                 <div class="right-column">
-                    <h3>A bit about me</h3>
-                    <p>Hi I am Mezekr.... Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Aliquam consectetur iusto voluptatibus
-                        ad, dolorem esse quibusdam quidem a laborum! Porro ad,
-                        velit in obcaecati cum voluptatum tempora dicta at
-                        dolore.</p>
+                    <h3>Carreer</h3>
+                    <p>I am a software developer with a M.Sc. in Applied
+                        Computer Science, specializing in full-stack web
+                        development. I also have two years of experience in data
+                        processing and machine learning. Now, I am excited about
+                        the opportunity to work in full-stack to turn clients'
+                        ideas into reality while combining my skills with my
+                        professional aspirations.</p>
                     <div class="career experience">
                         <h3>Experience</h3>
                         <div class="contents">
                             <ul>
-                                <li><span>2023</span> Software Developer at
-                                    Ferschu GMBH</li>
-                                <li><span>2020 - 2022</span>Student job as
-                                    Reacher assitant at TUBAF</li>
+                                <li><span>2023 - 2024</span> Certificate in Full
+                                    Stack Web Development, CarreerFoundry</li>
+                                <p class="experience-detail"> 500+ hours of
+                                    intensive, project-based training focused on
+                                    JavaScript, HTML, CSS, and the most
+                                    prominent web development frameworks,
+                                    libraries, techstacks (MERN and MEAN), and
+                                    tools.</p>
+                                <li><span>2023</span> Software developer,
+                                    FERCHAU GmbH ( employed by Pulsotronic GmbH
+                                    & Co. KG)</li>
+                                <p class="experience-detail"> Designed and
+                                    developed a software module to preprocess,
+                                    cleanse, and apply statistical and frequency
+                                    analysis to digital audio signals.</p>
+                                <li><span>2020 - 2022</span> Research assistant
+                                    on research projects, TU Bergakademie
+                                    Freiberg</li>
+                                <p class="experience-detail"> DiP-iT (Digital
+                                    Programming in Teams) research projects</p>
                             </ul>
                         </div>
                     </div>
@@ -165,15 +181,12 @@
                         <h3>Education</h3>
                         <div class="contents">
                             <ul>
-                                <li><span>2023 - 2024</span> Full-stack
-                                    development certification upskilling coures
-                                    at CarreerFoundry</li>
-                                <li><span>2019 - 2022</span>Masters in
+                                <li><span>2019 - 2022</span> M.S. in Applied
                                     Computer Science from TU Bergacdamiey
                                     freiberg</li>
-                                <li><span>2008 - 2013</span>BS in Comouter
-                                    Enginnerg from Eritrean Instutute of
-                                    enginering Mainefih</li>
+                                <li><span>2008 - 2013</span>B.S. in Computer
+                                    Engineering, Eritrean Institute of
+                                    Technology, Mai-Nefhi</li>
 
                             </ul>
                         </div>
@@ -317,12 +330,10 @@
                         <h3>myflix movies</h3>
                         <p>
                             An Angular front-end client for the MeziFlix movie
-                            API
-                            application, which is the server side of the
+                            API application, which is the server side of the
                             application. It allows the user to create an account
-                            and
-                            edit data. It provides the ability to search for a
-                            movie, save/delete it to/from the favorites.
+                            and edit data. It provides the ability to search for
+                            a movie, save/delete it to/from the favorites.
                         </p>
                         <div class="teck-stack">
                             <h4>Teck stack</h4>
@@ -549,7 +560,8 @@
                         </a>
                     </div>
                     <div class="call-to-action">
-                        <a href="#" target="_blank" class="button white">
+                        <a href="mailto:mezi.edu@tuta.io" target="_blank"
+                            class="button white">
                             Contact me</a>
                         <a href="./img/Mezekr-Weldu-Resume.pdf" target="_blank"
                             class="button black">
