correct typo error

--- a/index.html
+++ b/index.html
@@ -589,8 +589,8 @@
         <!-- contact me section of main page -->
         <section id="contact" class="contacts container">
             <h2>
-                <small>Contacts</small>
-                Contact me
+                <small>Contact</small>
+                me
             </h2>
             <div class="contact-me">
 
