--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <a href="#" class="logo-holder">
             <div class="logo">MW</div>
-            <div class="logo-text">Mezekr W.</div>
+            <div class="logo-text">Mezekr Weldu</div>
         </a>
 
         <nav class="main-navigation">
@@ -63,7 +63,7 @@
             <div class="hero-blue">
                 <div>
                     <h1> <small>Hi, I'm </small>
-                        Mezekr w.
+                        Mezekr Weldu
                     </h1>
                     <p><small>Full Stack Web Developer</small> based in
                         Germany.
@@ -239,11 +239,13 @@
                             <ul>
                                 <li>JavaScript</li>
                                 <li>Nodejs</li>
+                                <li>Express</li>
                                 <li>MongoDB</li>
                                 <li>Insomnia</li>
                                 <li>Render</li>
-                                <li>JWT Authorization</li>
+                                <li>JWT Auth</li>
                                 <li>Docker</li>
+                                <li>Vite</li>
                             </ul>
                         </div>
                         <div class="card-links">
@@ -312,8 +314,7 @@
                                 <li>React Bootcomp</li>
                                 <li>MongoDB</li>
                                 <li>Docker</li>
-                                <li>MongoDB</li>
-                                <li>Docker</li>
+                                <li>Vitest</li>
                             </ul>
                         </div>
                         <div class="card-links">
@@ -494,7 +495,7 @@
                                 <li>CSS</li>
                                 <li>JavaScript</li>
                                 <li>Expo</li>
-                                <li>Firestore Database</li>
+                                <li>Firestore</li>
                                 <li>Gifted Chat</li>
                             </ul>
                         </div>
