update skills section

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
                 Skills
             </h2>
             <div class="holder-blue">
+
                 <div class="left-column">
+                    <h3>What I do</h3>
                     <h3>Frontend</h3>
 
                     <p><span> &#11166</span> Turn
