--- a/index.html
+++ b/index.html
@@ -223,18 +223,17 @@
                 <article>
                     <figure>
                         <div>
-                            <img src="img/projects/MeziFlix_React_app.png"
+                            <img src="img/projects/MeziFlix-app.png"
                                 alt="MeziFlix React app" width="100%">
                             <figcaption>MeziFlix-App</figcaption>
                         </div>
                     </figure>
                     <div class="project-detail">
                         <h3>MeziFlix-App</h3>
-                        <p>A web application that allows users to access
-                            information about different films, directors and
-                            genres. Users will be able to register, update their
-                            personal information and create a list of their
-                            favourite films.
+                        <p>
+                            A backend web app stores movies and user data in a
+                            database. It provides user authentication and access
+                            to the data via the RESTful API.
                         </p>
                         <div class="teck-stack">
                             <h4>Teck stack</h4>
@@ -259,7 +258,7 @@
                                         d="M12 0.296997C5.37 0.296997 0 5.67 0 12.297C0 17.6 3.438 22.097 8.205 23.682C8.805 23.795 9.025 23.424 9.025 23.105C9.025 22.82 9.015 22.065 9.01 21.065C5.672 21.789 4.968 19.455 4.968 19.455C4.422 18.07 3.633 17.7 3.633 17.7C2.546 16.956 3.717 16.971 3.717 16.971C4.922 17.055 5.555 18.207 5.555 18.207C6.625 20.042 8.364 19.512 9.05 19.205C9.158 18.429 9.467 17.9 9.81 17.6C7.145 17.3 4.344 16.268 4.344 11.67C4.344 10.36 4.809 9.29 5.579 8.45C5.444 8.147 5.039 6.927 5.684 5.274C5.684 5.274 6.689 4.952 8.984 6.504C9.944 6.237 10.964 6.105 11.984 6.099C13.004 6.105 14.024 6.237 14.984 6.504C17.264 4.952 18.269 5.274 18.269 5.274C18.914 6.927 18.509 8.147 18.389 8.45C19.154 9.29 19.619 10.36 19.619 11.67C19.619 16.28 16.814 17.295 14.144 17.59C14.564 17.95 14.954 18.686 14.954 19.81C14.954 21.416 14.939 22.706 14.939 23.096C14.939 23.411 15.149 23.786 15.764 23.666C20.565 22.092 24 17.592 24 12.297C24 5.67 18.627 0.296997 12 0.296997Z"
                                         fill="white"></path>
                                 </svg>
-                                <a href="https://github.com/Mezekr/meziflix"
+                                <a href="https://github.com/Mezekr/MeziFlix-app"
                                     target="_blank" class="link">code</a>
                             </button>
 
@@ -271,18 +270,7 @@
                                         d="M13.723 18.654l-3.61 3.609c-2.316 2.315-6.063 2.315-8.378 0-1.12-1.118-1.735-2.606-1.735-4.188 0-1.582.615-3.07 1.734-4.189l4.866-4.865c2.355-2.355 6.114-2.262 8.377 0 .453.453.81.973 1.089 1.527l-1.593 1.592c-.18-.613-.5-1.189-.964-1.652-1.448-1.448-3.93-1.51-5.439-.001l-.001.002-4.867 4.865c-1.5 1.499-1.5 3.941 0 5.44 1.517 1.517 3.958 1.488 5.442 0l2.425-2.424c.993.284 1.791.335 2.654.284zm.161-16.918l-3.574 3.576c.847-.05 1.655 0 2.653.283l2.393-2.389c1.498-1.502 3.94-1.5 5.44-.001 1.517 1.518 1.486 3.959 0 5.442l-4.831 4.831-.003.002c-1.438 1.437-3.886 1.552-5.439-.002-.473-.474-.785-1.042-.956-1.643l-.084.068-1.517 1.515c.28.556.635 1.075 1.088 1.528 2.245 2.245 6.004 2.374 8.378 0l4.832-4.831c2.314-2.316 2.316-6.062-.001-8.377-2.317-2.321-6.067-2.313-8.379-.002z" />
                                 </svg>
 
-                                <a href="/img/MeziFlix_Casestudy.pdf"
-                                    target="_blank" class="link">Case Study</a>
-                            </button>
-                            <button class="card_button">
-                                <svg xmlns="http://www.w3.org/2000/svg"
-                                    width="24" height="24" viewBox="0 0 24 24"
-                                    fill="white">
-                                    <path
-                                        d="M13.723 18.654l-3.61 3.609c-2.316 2.315-6.063 2.315-8.378 0-1.12-1.118-1.735-2.606-1.735-4.188 0-1.582.615-3.07 1.734-4.189l4.866-4.865c2.355-2.355 6.114-2.262 8.377 0 .453.453.81.973 1.089 1.527l-1.593 1.592c-.18-.613-.5-1.189-.964-1.652-1.448-1.448-3.93-1.51-5.439-.001l-.001.002-4.867 4.865c-1.5 1.499-1.5 3.941 0 5.44 1.517 1.517 3.958 1.488 5.442 0l2.425-2.424c.993.284 1.791.335 2.654.284zm.161-16.918l-3.574 3.576c.847-.05 1.655 0 2.653.283l2.393-2.389c1.498-1.502 3.94-1.5 5.44-.001 1.517 1.518 1.486 3.959 0 5.442l-4.831 4.831-.003.002c-1.438 1.437-3.886 1.552-5.439-.002-.473-.474-.785-1.042-.956-1.643l-.084.068-1.517 1.515c.28.556.635 1.075 1.088 1.528 2.245 2.245 6.004 2.374 8.378 0l4.832-4.831c2.314-2.316 2.316-6.062-.001-8.377-2.317-2.321-6.067-2.313-8.379-.002z" />
-                                </svg>
-
-                                <a href="https://meziflix.netlify.app"
+                                <a href="https://dashboard.render.com/web/srv-cnas3gljm4es73c96tp0/deploys/dep-cqgivteehbks738uetd0?m=max"
                                     target="_blank" class="link">Preview</a>
                             </button>
                         </div>
@@ -312,11 +300,12 @@
                                 <li>Html</li>
                                 <li>CSS</li>
                                 <li>JavaScript</li>
+                                <li>RESTful API</li>
                                 <li>React</li>
                                 <li>React Bootcomp</li>
                                 <li>MongoDB</li>
                                 <li>Docker</li>
-                                <li>Vitest</li>
+                                <li>Vite</li>
                             </ul>
                         </div>
                         <div class="card-links">
@@ -328,7 +317,7 @@
                                         d="M12 0.296997C5.37 0.296997 0 5.67 0 12.297C0 17.6 3.438 22.097 8.205 23.682C8.805 23.795 9.025 23.424 9.025 23.105C9.025 22.82 9.015 22.065 9.01 21.065C5.672 21.789 4.968 19.455 4.968 19.455C4.422 18.07 3.633 17.7 3.633 17.7C2.546 16.956 3.717 16.971 3.717 16.971C4.922 17.055 5.555 18.207 5.555 18.207C6.625 20.042 8.364 19.512 9.05 19.205C9.158 18.429 9.467 17.9 9.81 17.6C7.145 17.3 4.344 16.268 4.344 11.67C4.344 10.36 4.809 9.29 5.579 8.45C5.444 8.147 5.039 6.927 5.684 5.274C5.684 5.274 6.689 4.952 8.984 6.504C9.944 6.237 10.964 6.105 11.984 6.099C13.004 6.105 14.024 6.237 14.984 6.504C17.264 4.952 18.269 5.274 18.269 5.274C18.914 6.927 18.509 8.147 18.389 8.45C19.154 9.29 19.619 10.36 19.619 11.67C19.619 16.28 16.814 17.295 14.144 17.59C14.564 17.95 14.954 18.686 14.954 19.81C14.954 21.416 14.939 22.706 14.939 23.096C14.939 23.411 15.149 23.786 15.764 23.666C20.565 22.092 24 17.592 24 12.297C24 5.67 18.627 0.296997 12 0.296997Z"
                                         fill="white"></path>
                                 </svg>
-                                <a href="https://github.com/Mezekr/meziflix"
+                                <a href="https://github.com/Mezekr/MeziFlix-client"
                                     target="_blank" class="link">code</a>
                             </button>
 
@@ -369,7 +358,7 @@
                     <div class="project-detail">
                         <h3>Pokedex JS App</h3>
                         <p>
-                            A Javascript application to display a list of
+                            A Javascript app to display a list of
                             Pokémon
                             cards. It loads data from an external Pokémon API
                             and
@@ -421,11 +410,11 @@
                         <div>
                             <img src="./img/projects/myflix_movies_page.png"
                                 alt="MeziFlix Angular app" width="100%">
-                            <figcaption>myflix movies</figcaption>
+                            <figcaption>myflix</figcaption>
                         </div>
                     </figure>
                     <div class="project-detail">
-                        <h3>myflix movies</h3>
+                        <h3>myflix</h3>
                         <p>
                             An Angular front-end client for the MeziFlix movie
                             API application, which is the server side of the
@@ -436,11 +425,11 @@
                         <div class="teck-stack">
                             <h4>Teck stack</h4>
                             <ul>
-                                <li>Angle 17</li>
-                                <li>Material design</li>
+                                <li>Angular 17</li>
                                 <li>SCSS</li>
                                 <li>TS</li>
-                                <li>API</li>
+                                <li>RESTful API</li>
+                                <li>Material design</li>
                             </ul>
                         </div>
                         <div class="card-links">
