--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
                 <li role="presentation"><a href="#contact"
                         role="menuitem">Contact</a>
                 </li>
-                <li role="presentation"><a href="mailto:mezi.edu@tuta.io"
-                        role="menuitem" class="button">Contact me</a>
+                <li role="presentation"><a
+                        href="mailto:mezekr.weldu@tutamail.com" role="menuitem"
+                        class="button">Contact me</a>
                 </li>
             </ul>
             <a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
@@ -83,15 +84,15 @@
                         <a href="./img/Mezekr-Weldu-Resume.pdf" target="_blank"
                             class="button black">
                             View Resume</a>
-                        <a href="mailto:mezi.edu@tuta.io" target="_blank"
-                            class="button white">
+                        <a href="mailto:mezekr.weldu@tutamail.com"
+                            target="_blank" class="button white">
                             Contact me</a>
                     </div>
                     <div class="social-links">
                         <a href="https://github.com/Mezekr" target="_blank">
                             <img src="img/github_icon.svg" alt="github icon">
                         </a>
-                        <a href="https://www.linkedin.com/mezekrweldu"
+                        <a href="https://www.linkedin.com/in/mezekrweldu"
                             target="_blank">
                             <img src="img/linkedin_icon.svg" alt="linked icon">
                         </a>
@@ -598,10 +599,11 @@
                         </p>
                     </div>
                     <div class="social-links">
-                        <a href="https://github.com/" target="_blank">
+                        <a href="https://github.com/Mezekr" target="_blank">
                             <img src="img/github_icon.svg" alt="github icon">
                         </a>
-                        <a href="https://www.linkedin.com/" target="_blank">
+                        <a href="https://www.linkedin.com/in/mezekrweldu"
+                            target="_blank">
                             <img src="img/linkedin_icon.svg" alt="linked icon">
                         </a>
                     </div>
