refactor links of projects thumnails & pdf files

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         class="button">Contact me</a>
                 </li>
             </ul>
+            <!-- toggle Mobile Menu-->
             <a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
                 <svg class="w-6 h-6 text-gray-800 dark:text-white"
                     aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
@@ -81,8 +82,8 @@
 
                     </p>
                     <div class="call-to-action">
-                        <a href="./img/Mezekr-Weldu-Resume.pdf" target="_blank"
-                            class="button black">
+                        <a href="./pdf_files/Mezekr-Weldu-Resume.pdf"
+                            target="_blank" class="button black">
                             View Resume</a>
                         <a href="mailto:mezekr.weldu@tutamail.com"
                             target="_blank" class="button white">
@@ -105,6 +106,7 @@
                     alt="Mezekr profile portrait photograph" width="100%">
             </div>
         </section>
+
         <!-- aboutme skills section of main page -->
         <section id="about" class="skills container">
             <h2>
@@ -212,6 +214,7 @@
                 </div>
             </div>
         </section>
+
         <!-- work experience/ projects section of main page -->
         <section id="work" class="work-experience container">
             <h2>
@@ -223,7 +226,7 @@
                 <article>
                     <figure>
                         <div>
-                            <img src="img/projects/MeziFlix-app.png"
+                            <img src="img/projects_thumbnail/MeziFlix-app.png"
                                 alt="MeziFlix React app" width="100%">
                             <figcaption>MeziFlix-App</figcaption>
                         </div>
@@ -280,7 +283,7 @@
                 <article>
                     <figure>
                         <div>
-                            <img src="img/projects/MeziFlix_React_app.png"
+                            <img src="img/projects_thumbnail/MeziFlix_React_app.png"
                                 alt="MeziFlix React app" width="100%">
                             <figcaption>MeziFlix React app</figcaption>
                         </div>
@@ -329,7 +332,7 @@
                                         d="M13.723 18.654l-3.61 3.609c-2.316 2.315-6.063 2.315-8.378 0-1.12-1.118-1.735-2.606-1.735-4.188 0-1.582.615-3.07 1.734-4.189l4.866-4.865c2.355-2.355 6.114-2.262 8.377 0 .453.453.81.973 1.089 1.527l-1.593 1.592c-.18-.613-.5-1.189-.964-1.652-1.448-1.448-3.93-1.51-5.439-.001l-.001.002-4.867 4.865c-1.5 1.499-1.5 3.941 0 5.44 1.517 1.517 3.958 1.488 5.442 0l2.425-2.424c.993.284 1.791.335 2.654.284zm.161-16.918l-3.574 3.576c.847-.05 1.655 0 2.653.283l2.393-2.389c1.498-1.502 3.94-1.5 5.44-.001 1.517 1.518 1.486 3.959 0 5.442l-4.831 4.831-.003.002c-1.438 1.437-3.886 1.552-5.439-.002-.473-.474-.785-1.042-.956-1.643l-.084.068-1.517 1.515c.28.556.635 1.075 1.088 1.528 2.245 2.245 6.004 2.374 8.378 0l4.832-4.831c2.314-2.316 2.316-6.062-.001-8.377-2.317-2.321-6.067-2.313-8.379-.002z" />
                                 </svg>
 
-                                <a href="/img/MeziFlix_Casestudy.pdf"
+                                <a href="./pdf_files/MeziFlix_Casestudy.pdf"
                                     target="_blank" class="link">Case Study</a>
                             </button>
                             <button class="card_button">
@@ -346,11 +349,12 @@
                         </div>
                     </div>
                 </article>
+
                 <!-- Pokedex JavaScript app  -->
                 <article>
                     <figure>
                         <div>
-                            <img src="img/projects/Pokedex-js-app.png"
+                            <img src="img/projects_thumbnail/Pokedex-js-app.png"
                                 alt="Pokedex JavaScript app" width="100%">
                             <figcaption>Pokedex JS App</figcaption>
                         </div>
@@ -404,11 +408,12 @@
                         </div>
                     </div>
                 </article>
+
                 <!-- MeziFlix Angular app  -->
                 <article>
                     <figure>
                         <div>
-                            <img src="./img/projects/myflix_movies_page.png"
+                            <img src="./img/projects_thumbnail/myflix_movies_page.png"
                                 alt="MeziFlix Angular app" width="100%">
                             <figcaption>myflix</figcaption>
                         </div>
@@ -458,17 +463,17 @@
                         </div>
                     </div>
                 </article>
+
                 <!-- MeziChat  -->
                 <article>
                     <figure>
                         <div>
                             <video width="400" controls>
-                                <source src="./img/projects/AppUI_2.mp4"
+                                <source
+                                    src="./img/projects_thumbnail/AppUI_2.mp4"
                                     type="video/mp4">
                                 Your browser does not support HTML5 video.
                             </video>
-                            <!-- <img src="img/projects/MeziFlix_React_app.png"
-                                alt="MeziFlix React app" width="100%"> -->
                             <figcaption>MeziChat</figcaption>
                         </div>
                     </figure>
@@ -516,12 +521,13 @@
                         </div>
                     </div>
                 </article>
+
                 <!-- MeziFlix React app  -->
                 <article>
                     <figure>
                         <div>
-                            <img src="./img/projects/mezimeet_app_screen.png"
-                                alt="MeziFlix React app" width="100%">
+                            <img src="./img/projects_thumbnail/mezimeet_app_screen.png"
+                                alt="Mezimeet app Preview image" width="100%">
                             <figcaption>Mezimeet</figcaption>
                         </div>
                     </figure>
@@ -611,8 +617,8 @@
                         <a href="mailto:mezi.edu@tuta.io" target="_blank"
                             class="button white">
                             Contact me</a>
-                        <a href="./img/Mezekr-Weldu-Resume.pdf" target="_blank"
-                            class="button black">
+                        <a href="./pdf_files/Mezekr-Weldu-Resume.pdf"
+                            target="_blank" class="button black">
                             Download Resume</a>
                     </div>
                 </div>
