update contact me email address

--- a/index.html
+++ b/index.html
@@ -602,8 +602,8 @@
                         </a>
                     </div>
                     <div class="call-to-action">
-                        <a href="mailto:mezi.edu@tuta.io" target="_blank"
-                            class="button white">
+                        <a href="mailto:mezekr.weldu@tutamail.com"
+                            target="_blank" class="button white">
                             Contact me</a>
                         <a href="./pdf_files/Mezekr-Weldu-Resume.pdf"
                             target="_blank" class="button black">
