--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <!-- <link rel="stylesheet" href="css/style.production.css"> -->
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/scripts.js"></script>
+    <link rel="stylesheet" href="css/style.production.css">
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
+    <script src="js/scripts.js" defer></script>
 
 </head>
 
