add footer and link to Impressum page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="css/style.production.css">
-    <!-- <link rel="stylesheet" href="css/styles.css"> -->
+    <!-- <link rel="stylesheet" href="css/style.production.css"> -->
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/scripts.js" defer></script>
 
 </head>
@@ -650,6 +650,22 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+
+        <a href="#" class="logo-holder">
+            <div class="logo-text">Mezekr Weldu</div>
+        </a>
+
+        <div class="social-links">
+            <a href="https://github.com/Mezekr" target="_blank">
+                <img src="img/github_icon.svg" alt="github icon">
+            </a>
+            <a href="https://www.linkedin.com/in/mezekrweldu" target="_blank">
+                <img src="img/linkedin_icon.svg" alt="linked icon">
+            </a>
+        </div>
+        <a href="impressum.html" target="_blank">Impressum</a>
+    </footer>
 </body>
 
 </html>
